sass/core/_grid.scss
/* ... */
// Media query down
@mixin mq-down($name) {
	@include mq($max-width: $name) {
		@content;
	}
}

// Media query only
@mixin mq-only($name) {
	@include mq($min-width: $name, $max-width: $name) {
		@content;
	}
}

// Media query landscape
@mixin mq-landscape() {
	@include mq(landscape) {
		@content;
	}
}

// Media query portrait
@mixin mq-portrait() {
	@include mq(portrait) {
		@content;
	}
}

// Media query print only
@mixin mq-print() {
	@media print {
		@content;
	}
}

// Media query primary input mechanism can hover
@mixin mq-hover($can-hover: true) {
	@media (hover: if($can-hover, hover, none)) {
		@content;
	}
}

// Media query primary input mechanism cant hover
@mixin mq-touch() {
	@media (hover: none) {
		@content;
	}
}

/////////
// OUTPUT
/////////

@mixin generate-grid-core-output($breakpoint-prefix: '', $breakpoint-prefix-short: '', $breakpoint-name: '') {
	@if $rr-generate-grid-breakpoints {
		// Grid base
		@if grid-is-default($breakpoint-name) {
			// Container
			.#{$rr-grid-container-class} {
				max-width: none;
			}

			// Row
			.#{$rr-grid-row-class} {
				display: flex;
				flex-wrap: wrap;
			}

			// Column
			.#{$rr-grid-column-class} {
				flex: 0 0 100%;
			}

			// Column force line break
			.#{$rr-grid-line-break-class} {
				flex: 1 1 100%;
				height: 0;
				width: auto;
				overflow: hidden;
			}
		}

		// Get breakpoint properties
		$breakpoint-columns: grid-breakpoint-property($breakpoint-name, 'columns');
		$breakpoint-base-size: grid-breakpoint-property($breakpoint-name, 'base-size');
		$breakpoint-container-width: grid-breakpoint-property($breakpoint-name, 'container-width');
		$breakpoint-container-spacing: grid-breakpoint-property($breakpoint-name, 'container-spacing');
		$breakpoint-container-alignment: grid-breakpoint-property($breakpoint-name, 'container-alignment');

		// Apply media query
		:root {
			--rr-grid-column-base: #{$breakpoint-columns};
		}

		// Base size
		@if is-number($breakpoint-base-size) {
			body {
				font-size: $breakpoint-base-size;
			}
		}

		// Container
		@if is-number($breakpoint-container-width) {
			.#{$rr-grid-container-class} {
				max-width: $breakpoint-container-width;

				@if $breakpoint-container-alignment == right {
					margin-right: $breakpoint-container-horizontal-margin;
					margin-left: auto;
				} @else if $breakpoint-container-alignment == left {
					margin-right: auto;
					margin-left: $breakpoint-container-horizontal-margin;
				} @else if $breakpoint-container-alignment == center {
					margin-left: auto;
					margin-right: auto;
				}
			}
		}

		// Row gutter fix
		.#{$rr-grid-row-class} .#{$rr-grid-row-class} {
			margin-left: -(grid-gutter-half($breakpoint-name));
			margin-right: -(grid-gutter-half($breakpoint-name));
		}

		// Column gutter
		.#{$rr-grid-column-class},
		.#{$breakpoint-prefix-short}#{$rr-grid-row-gutter-class} > .#{$rr-grid-column-class} {
			padding-left: grid-gutter-half($breakpoint-name);
			padding-right: grid-gutter-half($breakpoint-name);
		}

		// Gutter reset
		.#{$breakpoint-prefix-short}#{$rr-grid-row-nogutter-class} {
			> .#{$rr-grid-column-class} {
				padding-left: 0;
				padding-right: 0;

				.#{$rr-grid-row-class} {
					margin-left: 0;
					margin-right: 0;
				}
			}
		}

		// Column (normal)
		@if $rr-generate-grid-breakpoints-normal {
			@for $column-index from 1 through $breakpoint-columns {
				// Breakpoint
				.#{$rr-grid-column-class}.#{$breakpoint-prefix}#{$column-index},
				.#{$rr-grid-row-class}.#{$breakpoint-prefix}#{$column-index} > .#{$rr-grid-column-class} {
					flex: 0 0 calc(#{$column-index} / var(--rr-grid-column-base) * 100%);

					.#{$rr-grid-row-class} {
						--rr-grid-column-base: #{$column-index};
					}
				}

				// Offset
				.#{$breakpoint-prefix}#{$rr-grid-offset-class-prefix}#{$column-index} {
					margin-left: calc(#{$column-index} / var(--rr-grid-column-base) * 100%);
				}
			}
		}

		// Column (fraction)
		$fractions-added: ();

		@if $rr-generate-grid-breakpoints-fraction {
			@for $denominator from 1 through $rr-grid-breakpoint-fraction-steps {
				@for $numerator from 1 through $denominator {
					@if $numerator != $denominator {
						$percent: 100% / $denominator * $numerator;
						$fraction-class: '#{$numerator}#{$rr-grid-breakpoint-fraction-prefix-delimiter}#{$denominator}';

						@if not in-list($fractions-added, $percent) {
							// Breakpoint
							.#{$rr-grid-column-class}.#{$breakpoint-prefix}#{$fraction-class},
							.#{$rr-grid-row-class}.#{$breakpoint-prefix}#{$fraction-class} > .#{$rr-grid-column-class} {
								flex: 0 0 $percent;
							}

							// Offset
							.#{$breakpoint-prefix}#{$rr-grid-offset-class-prefix}#{$numerator}#{$rr-grid-breakpoint-fraction-prefix-delimiter}#{$denominator} {
								margin-left: $percent;
							}

							$fractions-added: append($fractions-added, $percent);
						}

					}
				}
			}
		}

		// Column (all) full width
		.#{$rr-grid-column-class}.#{$breakpoint-prefix}#{$rr-global-full-class},
		.#{$rr-grid-row-class}.#{$breakpoint-prefix}#{$rr-global-full-class} > .#{$rr-grid-column-class} {
			flex: 0 0 100%;

			.#{$rr-grid-row-class} {
				--rr-grid-column-base: #{$breakpoint-columns};
			}
		}

		// Column (all) auto fill width
		.#{$rr-grid-column-class}.#{$breakpoint-prefix}#{$rr-grid-column-auto-class},
		.#{$rr-grid-row-class}.#{$breakpoint-prefix}#{$rr-grid-column-auto-class} > .#{$rr-grid-column-class} {
			flex: 1 1 0px;
		}

		.#{$rr-grid-column-class}.#{$breakpoint-prefix}#{$rr-grid-column-shrink-class},
		.#{$rr-grid-row-class}.#{$breakpoint-prefix}#{$rr-grid-column-shrink-class} > .#{$rr-grid-column-class} {
			flex: 0 0 auto;
		}

		// Column (all) reset
		.#{$breakpoint-prefix}#{$rr-grid-reset-class} {
			margin-left: 0;
		}
	}
}
/* ... */

